[gd_scene load_steps=4 format=3 uid="uid://biaagdp30cc7y"]

[ext_resource type="Script" path="res://scenes/mob.gd" id="1_n33ms"]

[sub_resource type="CircleShape2D" id="CircleShape2D_00gbd"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_47obn"]
radius = 73.0

[node name="MOB" type="Node2D"]
script = ExtResource("1_n33ms")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_00gbd")
debug_color = Color(1, 0.137255, 0.290196, 0.419608)

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_47obn")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
